--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -1046,4 +1046,18 @@ h4 {
     justify-content: center;
     align-items: center;
     }
+}
+
+.col-sm-12 p{
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.col-xs-12 p{
+    font-size: 19px;
+    font-weight: 600;
+    margin: 0px;
+}
+.ita {
+    font-style: italic;
 }
