contraste et menu page2

--- a/style.css
+++ b/style.css
@@ -318,15 +318,17 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    margin-right: 15%;
     float: right;
     z-index: 1;
+    list-style-type: none;
 }
 
 .nav > li {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    padding-left: 20px;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -652,7 +654,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #232323!important;
 }
 
 .container {
@@ -737,7 +739,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #333!important;
 }
 
 .portfolio-thumb {
@@ -776,17 +778,17 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #333333!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #232323!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #232323!important;
 }
 
 .ltc-white {
@@ -794,7 +796,7 @@ h4 {
 }
 
 .ltc-white:hover {
-    color: #cccccc!important;
+    color: #585858!important;
 }
 
 .ltc-atomic-tangerine {
