--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ h4 {
 }
 
 .tc-white {
-    color: #333333!important;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
@@ -1062,4 +1062,7 @@ h4 {
 }
 .ita {
     font-style: italic;
+}
+.black{
+    color:black !important;
 }
