--- a/style.css
+++ b/style.css
@@ -1044,7 +1044,7 @@ h4 {
         text-align: center;
     }
     .col-sm-6 a{
-        DISPLAY: FLEX;
+       display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -1066,4 +1066,10 @@ h4 {
 }
 .black{
     color:black !important;
+}
+.row li{
+    padding-top: 20px;
+}
+.row .col-sm-4{
+    padding-top: 20px;
 }
